--- a/css/main.css
+++ b/css/main.css
@@ -2,8 +2,6 @@ html {
   box-sizing: border-box;
   font-size: 100%;
   line-height: 1.5;
-  font-family: 'Roboto', sans-serif;
-  font-family: 'Roboto Condensed', sans-serif;
 }
 
 *, *::before, *::after {
@@ -12,6 +10,11 @@ html {
 
 body {
   margin: 0;
+}
+
+.img-flex {
+  display: block;
+  width: 100%;
 }
 
 .banner {
@@ -24,7 +27,32 @@ body {
   width: 100%;
   max-width: 45em;
   position: absolute;
+  left: 2em;
+  top: 2em;
   display: flex;
+  justify-content: space-between;
+}
+
+.mecha {
+  position: relative;
+  width: 100%;
+  display: block;
+}
+
+.text {
+  z-index: 100;
+  transform: translateY(-50);
+}
+
+.text h2 {
+  font-size: 3rem;
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: bold;
+}
+
+.text p {
+  font-size: 1.5rem;
+  font-family: "Roboto", sans-serif;
 }
 
 .btn-big {
@@ -40,4 +68,8 @@ body {
   border-width: 3px;
   padding: .5em .9em;
   display: inline-block;
+}
+
+.btn:hover {
+  background-color: #000;
 }
