--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,5 @@
 html {
   box-sizing: border-box;
-  font-size: 100%;
   line-height: 1.5;
 }
 
@@ -27,47 +26,54 @@ body {
   width: 100%;
   max-width: 45em;
   position: absolute;
-  left: 2em;
-  top: 2em;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
+  padding: 0 1rem;
 }
 
 .mecha {
   position: relative;
-  width: 100%;
-  display: block;
+  width: 35%;
 }
 
 .text {
   z-index: 100;
-  transform: translateY(-50);
+  width: 60%;
 }
 
 .text h2 {
   font-size: 3rem;
   font-family: "Roboto Condensed", sans-serif;
   font-weight: bold;
+  margin: 0;
+  line-height: 1.2;
+  max-width: 6em;
 }
 
 .text p {
   font-size: 1.5rem;
-  font-family: "Roboto", sans-serif;
+  font-family: Roboto, sans-serif;
+  margin: 1rem 0;
 }
 
 .btn-big {
   font-size: 1.5rem;
+  font-weight: bold;
 }
 
 .btn {
   background-color: #333;
   color: #fff;
   text-decoration: none;
-  font-size: 1.125rem;
   border-radius: 8px;
   border-width: 3px;
   padding: .5em .9em;
   display: inline-block;
+  font-family: Roboto, sans-serif;
 }
 
 .btn:hover {
